--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "daisyui": "^4.11.1",
     "lodash": "^4.17.21",
     "next": "14.2.3",
     "prop-types": "^15.8.1",
@@ -18,8 +19,8 @@
     "react-tailwindcss-datepicker": "^1.6.6"
   },
   "devDependencies": {
-    "daisyui": "^4.11.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
