--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-app",
+  "name": "itz_lingo_next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "axios": "^1.7.2",
+    "canvas-confetti": "^1.9.3",
     "daisyui": "^4.11.1",
     "lodash": "^4.17.21",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "prop-types": "^15.8.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-player": "^2.16.0",
     "react-tailwindcss-datepicker": "^1.6.6",
+    "sharp": "^0.33.4",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
@@ -25,4 +30,3 @@
     "tailwindcss": "^3.4.3"
   }
 }
-
